--- a/home/index.html
+++ b/home/index.html
@@ -1,6 +1,8 @@
 <head>
     <meta charset="utf-8" />
 
+    <title>longhirar / home</title>
+
     <!-- SweetAlert-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
