--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,8 @@
 <head>
     <meta charset="utf-8" />
 
+    <title>longhirar / contact</title>
+
 <!-- SweetAlert + jQuery -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
