Logo Update + Better Index CSS

--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <a href="#" onclick="openMenu()"><img src="/logo.svg" class="logo" /></a>
+            <a href="#" onclick="openMenu()" style="padding-bottom: 0; padding-top:0;"><p style="font-family: 'Arial'; font-size: 2.5rem; color: var(--header-text-color); height: 3rem; margin: 0;">longhirar</p></a>
             <a class="large-display-only header-link" href="/">HOME</a>
             <a class="large-display-only header-link" href="/projects">PROJECTS</a>
             <a class="large-display-only header-link" href="/contact">CONTACT</a>
