--- a/dark-mode/index.html
+++ b/dark-mode/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>longhirar / projects</title>
+    <title>longhirar / dark-mode</title>
 
     <!-- SweetAlert-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/index.css" />
     <script defer src="/index.js"></script>
 
-    <link rel="stylesheet" href="projects.css" />
+    <link rel="stylesheet" href="dark-mode.css" />
 </head>
 <body>
     <div class="header">
@@ -22,7 +22,7 @@
     </div>
 
     <div class="content">
-        <h1>My Projects</h1>
+        <h1>Dark Mode Test</h1>
         <hr>
         <p>Under construction</p>
         
