Added google-site-verification meta

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
+<meta name="google-site-verification" content="02kHVtKeRmT0f5psBCVA9C3Y_36E_MAYUJFU4tbKS4Q" />
 <meta http-equiv="refresh" content="0; URL='/home/'"/>
